[package]
name = "banana_diver"
version = "1.0.0"
authors = ["n.takana <Alignof@outlook.com>"]
edition = "2021"
description = "device tree source compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features=["cargo"]}
